fixed a Ruby syntax error

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <span class="keyword">attr_reader</span> <span class="constant">:likes</span>, <span class="constant">:education</span>
 
   <span class="keyword">def</span> <span class="name">initialize</span>
-    likes <span class="keyword">=</span> [
+    @likes <span class="keyword">=</span> [
       <span class="string">"musicals"</span>,
       <span class="string">"video games"</span>,
       <span class="string">"technology"</span>
