added more fake Ruby code to profile

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
   <span class="keyword">def</span> <span class="name">interests</span>
     [
-      <span class="string">"musicals"</span>,
-      <span class="string">"video games"</span>,
-      <span class="string">"technology"</span>
+      <span class="string">'musicals'</span>,
+      <span class="string">'video games'</span>,
+      <span class="string">'technology'</span>
     ]
   <span class="keyword">end</span>
 
@@ -74,14 +74,14 @@
           <span class="string">'Ruby'</span>,
           <span class="string">'SQL'</span>,
           <span class="string">'HTML'</span>,
-          <span class="string">'CSS'</span>,
+          <span class="string">'CSS'</span>
         ]
       },
       {
-        <span class="constant">school:</span> <span class="string">"New York University"</span>,
+        <span class="constant">school:</span> <span class="string">'New York University'</span>,
         <span class="constant">graduated: 2014</span>,
-        <span class="constant">majors:</span> [<span class="string">"Film and TV"</span>, <span class="string">"Spanish"</span>],
-        <span class="constant">minors:</span> [<span class="string">"Linguistics"</span>]
+        <span class="constant">majors:</span> [<span class="string">'Film and TV'</span>, <span class="string">'Spanish'</span>],
+        <span class="constant">minors:</span> [<span class="string">'Linguistics'</span>]
       }
     ]
   <span class="keyword">end</span>
