--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <span class="keyword">def</span> <span class="name">jobs</span>
     [
       {
-        <span class="constant">company:</span> <span class="string">'Mendefits'</span>,
+        <span class="constant">company:</span> <span class="string">'Mednefits'</span>,
         <span class="constant">role:</span> <span class="string">'Customer Support / QA'</span>,
         <span class="constant">start: 2019</span>,
         <span class="constant">end: 2020</span>
